--- a/produits.html
+++ b/produits.html
@@ -77,7 +77,7 @@
 <header>
   <a href="index.html"><img src="logo-transparent.png" alt="Logo Quinca Plus"></a>
 </header>
-<main class="content">
+<main class="content" style="max-width: 1000px; margin: auto;">
   <section id="catalogue">
     <h2 style="font-size: 2.5rem; text-align: center; color: #a60000; text-shadow: 1px 1px 2px rgba(0,0,0,0.2);">Nos catégories</h2>
     <div class="category-grid">
