--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
     }
     header {
       background-color: #a60000;
-      padding: 2rem 1rem;
-      text-align: center;
+      padding: 1rem 2rem;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
     header img {
       height: 70px;
       filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));
+    }
+    header h1 {
+      font-size: 2.5rem;
+      color: gold;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+      margin: 0;
     }
     nav {
       background-color: #fff;
@@ -47,41 +51,18 @@
     nav a:hover {
       color: #ffcc00;
     }
-    .scroll-title {
-      position: fixed;
-      top: 15%;
-      left: 50%;
-      transform: translate(-50%, -50%) perspective(1000px);
-      font-size: 5rem;
-      font-weight: 900;
-      color: gold;
-      text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
-      z-index: 900;
-      pointer-events: none;
-      white-space: nowrap;
-      animation: pulse 2s infinite ease-in-out;
-    }
-    @keyframes pulse {
-      0%, 100% { transform: translate(-50%, -50%) perspective(1000px) scale(1); }
-      50% { transform: translate(-50%, -50%) perspective(1000px) scale(1.05); }
-    }
     @media (max-width: 600px) {
-      .scroll-title {
-        font-size: 2.2rem;
-        top: 25%;
-      }
       header {
-        padding: 1.5rem 0.5rem;
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: center;
       }
-      main {
-        padding: 6rem 1rem 2rem;
-      }
-      section p {
-        font-size: 1rem;
+      header h1 {
+        font-size: 1.8rem;
       }
     }
     main {
-      padding: 8rem 2rem 4rem;
+      padding: 6rem 2rem 4rem;
       max-width: 900px;
       margin: auto;
       animation: fadein 1s ease-in-out;
@@ -120,6 +101,7 @@
     <a href="index.html">
       <img src="logo-transparent.png" alt="Logo Quinca Plus">
     </a>
+    <h1>QUINCA PLUS</h1>
   </header>
 
   <nav>
@@ -127,8 +109,6 @@
     <a href="produits.html">Produits</a>
     <a href="#contact">Nous contacter</a>
   </nav>
-
-  <div class="scroll-title">QUINCA PLUS</div>
 
   <main>
     <section id="presentation">
@@ -146,17 +126,5 @@
       <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp : <a href="https://wa.me/596696303995" style="color: inherit; text-decoration: none;">0696 30 39 95</a></p>
     </section>
   </main>
-
-  <script>
-    const scrollingTitle = document.querySelector('.scroll-title');
-    window.addEventListener('scroll', () => {
-      const scrollY = window.scrollY;
-      const rotateX = scrollY * 0.2;
-      const scale = 1 + scrollY / 1000;
-      const opacity = Math.max(1 - scrollY / 400, 0);
-      scrollingTitle.style.transform = `translate(-50%, -50%) perspective(1000px) rotateX(${rotateX}deg) scale(${scale})`;
-      scrollingTitle.style.opacity = opacity;
-    });
-  </script>
 </body>
 </html>
