--- a/index.html
+++ b/index.html
@@ -10,24 +10,36 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(to bottom, #fff, #f0f0f0);
+      background: radial-gradient(circle at top left, #fff, #f0f0f0);
     }
     header {
-      background-color: #a60000;
+      background: linear-gradient(to right, #a60000, #730000);
       padding: 1rem 2rem;
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      justify-content: center;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+      position: relative;
+    }
+    header .container {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      max-width: 1200px;
+      width: 100%;
     }
     header img {
       height: 70px;
       filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));
+      transition: transform 0.3s ease;
+    }
+    header img:hover {
+      transform: rotate(-5deg) scale(1.05);
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       color: gold;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
       margin: 0;
     }
     nav {
@@ -36,7 +48,7 @@
       justify-content: center;
       gap: 2rem;
       padding: 1rem;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -46,23 +58,30 @@
       color: #a60000;
       font-weight: bold;
       font-size: 1.1rem;
-      transition: color 0.2s ease;
+      position: relative;
     }
-    nav a:hover {
-      color: #ffcc00;
+    nav a::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      height: 3px;
+      background: linear-gradient(to right, gold, #ffcc00);
+      transition: width 0.3s ease-in-out;
+    }
+    nav a:hover::after {
+      width: 100%;
     }
     @media (max-width: 600px) {
-      header div {
+      header .container {
         flex-direction: column;
-        gap: 0.5rem;
-        text-align: center;
-      }
-        flex-direction: column;
+        align-items: center;
         gap: 0.5rem;
         text-align: center;
       }
       header h1 {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
     }
     main {
@@ -78,9 +97,14 @@
     section {
       margin-bottom: 3rem;
       background: #ffffffee;
-      border-radius: 12px;
+      border-radius: 16px;
       padding: 2rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    section:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
     }
     section h2 {
       color: #a60000;
@@ -102,7 +126,7 @@
 </head>
 <body>
   <header>
-    <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; width: 100%; max-width: 1200px; margin: auto;">
+    <div class="container">
       <a href="index.html">
         <img src="logo-transparent.png" alt="Logo Quinca Plus">
       </a>
