--- a/index.html
+++ b/index.html
@@ -174,12 +174,23 @@
     </section>
 
     <section id="contact">
-      <h2>Contact</h2>
-      <p>Adresse : Zone industrielle Cocotte Canal, 97224 Ducos</p>
-      <p>Email : <a href="mailto:contact.quincaplus@gmail.com">contact.quincaplus@gmail.com</a></p>
-      <p>Téléphone : <a href="tel:+596596564026">0596 56 40 26</a></p>
-      <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp : <a href="https://wa.me/596696303995" style="color: inherit; text-decoration: none;">0696 30 39 95</a></p>
-    </section>
+  <h2>Contact</h2>
+  <p>Adresse : Zone industrielle Cocotte Canal, 97224 Ducos</p>
+  <p>Email : <a href="mailto:contact.quincaplus@gmail.com">contact.quincaplus@gmail.com</a></p>
+  <p>Téléphone : <a href="tel:+596596564026">0596 56 40 26</a></p>
+  <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp :
+    <a href="https://wa.me/596696303995" style="color: inherit; text-decoration: none;">0696 30 39 95</a>
+  </p>
+  <div style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
+    <a href="https://www.facebook.com/share/18nVESehEV/?mibextid=wwXIfr" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook fa-2x" style="color:#3b5998;"></i>
+    </a>
+    <a href="https://www.instagram.com/quinca_plus?igsh=MTUzbWxhajl5YWM0Yg%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+      <i class="fab fa-instagram fa-2x" style="color:#E1306C;"></i>
+    </a>
+  </div>
+</section>
+
   </main>
 </body>
 </html>
