--- a/produits.html
+++ b/produits.html
@@ -3,93 +3,186 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quinca Plus</title>
+  <title>Bâtiment - Quinca Plus</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #f9f9f9;
+      background: linear-gradient(-45deg, #ffffff, #f5f5f5, #fff0f0, #f0f0ff);
+      background-size: 400% 400%;
+      animation: gradientFlow 15s ease infinite;
+    }
+    @keyframes gradientFlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
     header {
-      background-color: #a60000;
-      padding: 2rem 1rem;
-      text-align: center;
+      background: linear-gradient(to right, #a60000, #730000);
+      padding: 1rem 2rem;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+    }
+    header .container {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      max-width: 1200px;
+      width: 100%;
     }
     header img {
-      height: 60px;
+      height: 70px;
+      filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));
     }
     header h1 {
-      font-size: 2rem;
+      font-size: 3rem;
       color: gold;
-      text-shadow: 1px 1px 2px #000;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+      margin: 0;
+      background: linear-gradient(90deg, gold, #ffcc00);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: shine 3s linear infinite;
     }
-    .content {
-      flex: 1;
-      padding: 2rem;
+    @keyframes shine {
+      0% { background-position: -500px; }
+      100% { background-position: 500px; }
     }
-    section {
-      padding: 4rem 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    section h2 {
-      text-align: center;
-      color: #a60000;
-    }
-    .category-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 1rem;
-      margin-top: 2rem;
-    }
-    .category-card {
+    nav {
+      background-color: #fff;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      gap: 2rem;
       padding: 1rem;
-      background: #a60000;
-      color: gold;
-      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
       text-decoration: none;
+      color: #a60000;
       font-weight: bold;
       font-size: 1.1rem;
-      transition: transform 0.2s, box-shadow 0.2s;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      position: relative;
     }
-    .category-card:hover {
+    nav a::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      height: 3px;
+      background: linear-gradient(to right, gold, #ffcc00);
+      transition: width 0.3s ease-in-out;
+    }
+    nav a:hover::after {
+      width: 100%;
+    }
+    main {
+      max-width: 1200px;
+      margin: auto;
+      padding: 4rem 2rem;
+      animation: fadein 1s ease-in-out;
+    }
+    @keyframes fadein {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    h2 {
+      text-align: center;
+      color: #a60000;
+      margin-bottom: 2rem;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 2rem;
+    }
+    .product {
+      background: white;
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-align: center;
+      text-decoration: none;
+    }
+    .product:hover {
       transform: translateY(-5px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
     }
-    .category-card i {
-      font-size: 2rem;
+    .product img {
+      max-width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
       margin-bottom: 0.5rem;
+    }
+    .product h3 {
+      color: #a60000;
+      margin: 0.5rem 0 0.2rem;
+    }
+    .product p {
+      margin: 0;
+      font-size: 0.9rem;
+      color: #444;
     }
   </style>
 </head>
 <body>
-<header>
-  <a href="index.html"><img src="logo-transparent.png" alt="Logo Quinca Plus"></a>
-  
-</header>
-<main class="content" style="max-width: 1000px; margin: auto;">
-  <section id="catalogue">
-    <h2 style="font-size: 2.5rem; text-align: center; color: #a60000; text-shadow: 1px 1px 2px rgba(0,0,0,0.2);">Nos catégories</h2>
-    <div class="category-grid">
-      <a href="#promotions" class="category-card"><i class="fa-solid fa-tags"></i><span>Promotions</span></a>
-      <a href="#batiment" class="category-card"><i class="fa-solid fa-building"></i><span>Bâtiment</span></a>
-      <a href="#ameublement" class="category-card"><i class="fa-solid fa-couch"></i><span>Ameublement</span></a>
-      <a href="#fixations" class="category-card"><i class="fa-solid fa-screwdriver-wrench"></i><span>Fixations</span></a>
-      <a href="#electricite" class="category-card"><i class="fa-solid fa-bolt"></i><span>Électricité</span></a>
-      <a href="#plomberie" class="category-card"><i class="fa-solid fa-faucet"></i><span>Plomberie</span></a>
+  <header>
+    <div class="container">
+      <a href="index.html">
+        <img src="logo-transparent.png" alt="Logo Quinca Plus">
+      </a>
+      <h1>QUINCA PLUS</h1>
     </div>
-  </section>
-</main>
+  </header>
+
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="produits.html">Produits</a>
+  </nav>
+
+  <main>
+    <h2>Nos familles de produits</h2>
+    <div class="products">
+      <a href="#" class="product">
+        <img src="images/fixation.jpg" alt="Fixations">
+        <h3>Fixations</h3>
+        <p>Vis, chevilles, boulons...</p>
+      </a>
+      <a href="#" class="product">
+        <img src="images/jardin.jpg" alt="Jardin">
+        <h3>Jardin</h3>
+        <p>Outillage, arrosage, clôtures...</p>
+      </a>
+      <a href="#" class="product">
+        <img src="images/plomberie.jpg" alt="Plomberie">
+        <h3>Plomberie</h3>
+        <p>Tuyaux, raccords, joints...</p>
+      </a>
+      <a href="#" class="product">
+        <img src="images/electricite.jpg" alt="Électricité">
+        <h3>Électricité</h3>
+        <p>Prises, câbles, disjoncteurs...</p>
+      </a>
+      <a href="#" class="product">
+        <img src="images/serrurerie.jpg" alt="Serrurerie et poignées">
+        <h3>Serrurerie et poignées</h3>
+        <p>Serrures, poignées, cylindres...</p>
+      </a>
+      <a href="#" class="product">
+        <img src="images/placard-cuisine.jpg" alt="Placard et cuisine">
+        <h3>Placard et cuisine</h3>
+        <p>Aménagements, plinthes, coulisses...</p>
+      </a>
+    </div>
+  </main>
 </body>
 </html>
