--- a/produits.html
+++ b/produits.html
@@ -60,12 +60,14 @@
       background-color: #fff;
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 2rem;
       padding: 1rem;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       position: sticky;
       top: 0;
       z-index: 1000;
+      flex-wrap: wrap;
     }
     nav a {
       text-decoration: none;
