--- a/produits.html
+++ b/produits.html
@@ -21,11 +21,14 @@
     }
     header {
       background: linear-gradient(to right, #a60000, #730000);
-      padding: 1rem 2rem;
+      padding: 2rem 1rem;
+      text-align: center;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+      position: relative;
     }
     header .container {
       display: flex;
@@ -33,6 +36,7 @@
       gap: 1rem;
       max-width: 1200px;
       width: 100%;
+      justify-content: center;
     }
     header img {
       height: 70px;
