--- a/produits.html
+++ b/produits.html
@@ -21,8 +21,12 @@
     }
     header {
       background: linear-gradient(to right, #a60000, #730000);
-      padding: 2rem 1rem;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+      position: relative;
     }
     header .container {
       max-width: 1200px;
