--- a/produits.html
+++ b/produits.html
@@ -21,20 +21,20 @@
     }
     header {
       background: linear-gradient(to right, #a60000, #730000);
-      padding: 1rem 2rem;
+      padding: 2rem 1rem;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-      position: relative;
     }
     header .container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
       max-width: 1200px;
       width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 1rem;
     }
     header img {
       height: 70px;
